# TunaDB

./: Cargo.toml  README.md  out.db  out.{db
cli/: Cargo.toml
cli/src/: command.rs  main.rs
core/: Cargo.toml  build.rs
core/src/: command.rs  config.rs  index.rs  lib.rs  response.rs  serializer.rs  storage.rs
core/src/protobuf/: command.rs  entry.rs  response.rs  snazzy.clothes.rs
core/src/protobuf/protofiles/: command.proto  entry.proto  items.proto  response.proto
server/: Cargo.toml
server/src/: args.rs  main.rs  tcp.rs
src/: config.rs  main.rs  storage.rs
tcp/: Cargo.toml
tcp/src/: args.rs  command.rs  main.rs  storage.rs
