[package]
name = "cli"
description = "TunaDB. A simple key-value storage written in Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.10", features = ["derive"] }
core = {path = "../core"}

[[bin]]
name = "tuna"
path = "src/main.rs"
