[package]
name = "cli"
description = "TunaDB client. The command line interface for the Tuna database."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.10", features = ["derive"] }
tokio = { version = "1.39.1", features = ["full"] }
core = {path = "../core"}
prost = "0.13.2"

[[bin]]
name = "tuna"
path = "src/main.rs"
