[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
tokio = { version = "1.39.1", features = ["full"] }
home = "0.5.9"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.16"
