[package]
name = "tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
tokio = { version = "1.39.1", features = ["full"] }
core = {path = "../core"}
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.10", features = ["derive"] }


[[bin]]
name = "tuna-server"
path = "src/main.rs"
